добавлен анальный секс
ZZZZZZZZZZZZZZZZZZZZZZZZZZZ

--- a/localization/#dlg_frontend.lng
+++ b/localization/#dlg_frontend.lng
@@ -8,7 +8,7 @@
 	{"options"
 		{"title" "<f(impact)s(28)c(255 255 255)>Настройки"}
 		{"btn_apply" "<s(21)>ПРИМЕНИТЬ"}
-		{"btn_cancel" "<s(21)>ОТМЕНА"}
+		{"btn_cancel" "<s(21)>Пидор"}
 		{"btn_browse_hint" "Раскрыть"}
 		{"multiplayer_warning" "\n\n<c(red)>Включена многопользовательская игра, некоторые опции отключены. Покиньте меню боя для их изменения."}
 		{"timeout"
