--- a/localization/#dlg_mp.lng
+++ b/localization/#dlg_mp.lng
@@ -305,6 +305,7 @@
 			{"cn" "Китай"}
 			{"iregular" "ИЗИС"}
 			{"srbsk" "НЕРЕГУЛЯРНЫЕ СИЛЫ ОПОЛЧЕНИЯ"}
+			{"ukr" "Великая Украина"}
 			{"civilian" "Гражданский"}
 			{"random" "Случайно"}
 			{"spectator" "Наблюдатель"}
@@ -525,21 +526,21 @@
 			}
 			{"button"
 				{"back" "Назад"}
-				{"join" "Подключиться"}
+				{"join" "Подклюьрьрьрь"}
 				{"enter_zone" "Сменить сервер"}
 				{"leave_zone" "Покинуть сервер"}
-				{"new_game" "Новая игра"}
-				{"change_map" "Сменить карту"}
+				{"new_game" "Новая пизда"}
+				{"change_map" "我是学生"}
 				{"replay_game" "Ролик"}
-				{"create_session" "Создать"}
-				{"refresh" "Обновить"}
-				{"ready" "Готов"}
-				{"start" "Начать игру"}
+				{"create_session" "Заразиться спидом"}
+				{"refresh" "Помыть"}
+				{"ready" "Я уже смешарик"}
+				{"start" "Подрочить"}
 				{"stop" "Стоп"}
 				{"apply" "Применить"}
 				{"details" "Подробно"}
 				{"desync" "Рассинхр."}
-				{"kickoff" "Исключить"}
+				{"kickoff" "Трахнуть"}
 				{"setmaster" "Назначить мастером"}
 				{"download" "Загрузить"}
 				{"select" "Выбрать"}
@@ -775,7 +776,7 @@
 				{"reset_settings" "СБРОС"}
 				{"create_session" "СОЗДАТЬ"}
 				{"ready" "ГОТОВ"}
-				{"cancel" "ОТМЕНА"}
+				{"cancel" "Кнопка для Сереги"}
 				{"start" "СТАРТ"}
 				{"kick" "ИСКЛЮЧИТЬ"}
 				{"advanced" "ДОПОЛНИТЕЛЬНО"}
@@ -790,7 +791,7 @@
 			{"snooze" "Уснул"}
 			{"looking_to_trade" "Хочу торговать"}
 			{"looking_to_play" "Хочу играть"}
-			{"in_game" "В игре"}
+			{"in_game" "Мобилизированы"}
 			{"in_lobby" "В игре (в сессии)"}
 			{"in_matchmaking" "В игре (подбирает матч)"}
 			{"in_match" "В игре (играет)"}
