--- a/localization/mission.lng
+++ b/localization/mission.lng
@@ -53,7 +53,15 @@
 			{"gostomel"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Аэродром</c>"}	}
 			{"k1234"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Зимний ад</c>"}	}
 			{"hungry"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Польская провинция</c>"} }
-		
+			{"huyson"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Два холма Хйсона</c>"}	}
+			{"avdos"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Авдеевка</c>"}	}
+			{"winter_walk"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Зимняя прогулка</c>"}	}
+			{"ybonaiy_pesok"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Пески Лизы</c>"}	}
+			{"negrila v88 belgorod edition"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Быдлогород</c>"}	}
+			{"negrila v3 kapustina edition"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Капустино</c>"}	}
+			{"negrila v3 oleshki edition"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Пески Алёшки</c>"}	}
+			{"nigrila v2 ss edition"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>2 моста</c>"}	}
+			{"polskav2"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Польская граница V2</c>"}	}
 		
 			{"8v8_farmland"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Сельхозрайон</c>"}				}			;null
 			{"lisa"			{"name" "<c(B205FC)e(shadow)>[5x5]"									" <c(05BCE6)e(shadow)>Новая Бухаловка</c>"}				}			;null
