--- a/localization/#dlg_mp.lng
+++ b/localization/#dlg_mp.lng
@@ -7,12 +7,12 @@
 {tags
 	{"mp"
 		{"game_ffa" "Свободная игра"}
-		{"msg_starting" "Загрузка сетевой игры..."}
+		{"msg_starting" "Загрузка писи лизы)))..."}
 		{"msg_restarting" "Перезагрузка сетевой игры..."}
 		{"msg_processmods" "Загрузка МОДов..."}
 		{"msg_searching" "Поиск сеанса..."}
 		{"msg_connecting" "Подключение..."}
-		{"msg_searching" "Поиск сессии..."}
+		{"msg_searching" "Поиск сереги..."}
 		{"msg_connecting_failed" "Не удалось подключиться"}
 		{"msg_steam_connecting_failed" "Ошибка соединения"}
 		{"msg_access_denied" "Доступ запрещен"}
@@ -231,7 +231,7 @@
 				{"rules" "Командная игра. Цель каждой команды  -  захватить и удерживать большее количество территориий, обозначенных точками на миникарте. Побеждает команда, сумевшая  удержать территории до тех пор, пока не кончится время или одна из команд не достигнет максимума контроля. Время игры ограничено. Захватить и удерживать территорию может только пехота."}
 				{"objective" "Захватывайте и удерживайте территории, обозначенные точками."}
 			}
-			{"neutral_zone" "Серая зона"}
+			{"neutral_zone" "Абрикосовые червяки"}
 			{"frontline_2"
 				{"info" "Захватывайте и удерживайте точки, обозначенные на миникарте."}
 				{"rules" "Командная игра. Цель каждой команды  -  захватить и удерживать большее количество территориий, обозначенных точками на миникарте. Побеждает команда, сумевшая  удержать территории до тех пор, пока не кончится время или одна из команд не достигнет максимума контроля. Время игры ограничено. Захватить и удерживать территорию может только пехота.\nИзначально стороны разделены, есть время на организацию обороны. Боевые действия начнутся после истечения таймера."}
@@ -299,7 +299,7 @@
 			{"uaf" "UAF"}
 			{"reb" "Rebels"}
 			{"ger" "Germany"}
-			{"rus" "Россия"}
+			{"rus" "Растения"}
 			{"nato" "НАТО"}
 			{"odkb" "ОДКБ"}
 			{"cn" "Китай"}
@@ -525,7 +525,7 @@
 				{"game.strategy#hint" "Отключение прямого управления войсками"}
 			}
 			{"button"
-				{"back" "Назад"}
+				{"back" "В писю лизы))))"}
 				{"join" "Подклюьрьрьрь"}
 				{"enter_zone" "Сменить сервер"}
 				{"leave_zone" "Покинуть сервер"}
@@ -549,7 +549,7 @@
 				{"delete" "Удалить"}
 				{"upload" "Загрузить"}
 				{"browse" "Просмотреть"}
-				{"rules" "Правила"}
+				{"rules" "Камасутра"}
 				{"advanced" "Расширенные настройки"}
 				{"results" "Показать результат предыдущей игры"}
 				{"matchmaking" "Пункт призыва"}
@@ -580,18 +580,18 @@
 					{"ai_heroic" "<c(204 0 0)e(shadow)>ИИ: Невозможный"}
 				}
 				{"hint"
-					{"open" "Ячейка открыта. Дважды щелкните для присоединения."}
-					{"closed" "Ячейка закрыта."}
+					{"open" "Ячейка открыта. Дважды щелкните для лишения девственности."}
+					{"closed" "Хост пидор."}
 					{"reserved" "Ячейка открыта только для друзей администратора."}
 					{"ai" "Ячейка зарезервирована для игрока ИИ."}
 				}
 			}
 			{"hint"
-				{"ready" "Готов"}
-				{"not_ready" "Не готов"}
+				{"ready" "Пидорас"}
+				{"not_ready" "Анус не готов"}
 				{"desynced" "Рассинхронизация"}
 				{"password_protected" "Защищена паролем"}
-				{"refresh" "Обновить"}
+				{"refresh" "Помыть"}
 				{"filter" "Фильтр"}
 				{"show_smileys" "Показывать меню эмоций"}
 				{"post_msg" "Послать сообщение"}
