--- a/localization/#dlg_mp.lng
+++ b/localization/#dlg_mp.lng
@@ -299,7 +299,7 @@
 			{"uaf" "UAF"}
 			{"reb" "Rebels"}
 			{"ger" "Germany"}
-			{"rus" "Растения"}
+			{"rus" "Россия"}
 			{"nato" "НАТО"}
 			{"odkb" "ОДКБ"}
 			{"cn" "Китай"}
