--- a/localization/#dlg_mp.lng
+++ b/localization/#dlg_mp.lng
@@ -231,7 +231,7 @@
 				{"rules" "Командная игра. Цель каждой команды  -  захватить и удерживать большее количество территориий, обозначенных точками на миникарте. Побеждает команда, сумевшая  удержать территории до тех пор, пока не кончится время или одна из команд не достигнет максимума контроля. Время игры ограничено. Захватить и удерживать территорию может только пехота."}
 				{"objective" "Захватывайте и удерживайте территории, обозначенные точками."}
 			}
-			{"neutral_zone" "Абрикосовые червяки"}
+			{"neutral_zone" "Серая зона"}
 			{"frontline_2"
 				{"info" "Захватывайте и удерживайте точки, обозначенные на миникарте."}
 				{"rules" "Командная игра. Цель каждой команды  -  захватить и удерживать большее количество территориий, обозначенных точками на миникарте. Побеждает команда, сумевшая  удержать территории до тех пор, пока не кончится время или одна из команд не достигнет максимума контроля. Время игры ограничено. Захватить и удерживать территорию может только пехота.\nИзначально стороны разделены, есть время на организацию обороны. Боевые действия начнутся после истечения таймера."}
