--- a/localization/#dlg_frontend.lng
+++ b/localization/#dlg_frontend.lng
@@ -7,12 +7,12 @@
 {tags
 	{"options"
 		{"title" "<f(impact)s(28)c(255 255 255)>Настройки"}
-		{"btn_apply" "<s(21)>ПРИМЕНИТЬ"}
+		{"btn_apply" "<s(21)>Макс пидор"}
 		{"btn_cancel" "<s(21)>Пидор"}
 		{"btn_browse_hint" "Раскрыть"}
 		{"multiplayer_warning" "\n\n<c(red)>Включена многопользовательская игра, некоторые опции отключены. Покиньте меню боя для их изменения."}
 		{"timeout"
-			{"question" "Вы хотите сохранить эти настройки?"}
+			{"question" "Вы хотите сохранить девственность?"}
 			{"text" "Предыдущие настройки будут восстановлены через %1% сек."}
 			{"texture_warning" "Настройки текстур будут применены после рестарта игры."}
 			{"mod_warning" "Настройки модов будут применены после рестарта игры."}
@@ -66,7 +66,7 @@
 			{"detail" "Качество текстур"}
 			{"detail#desc" "Качество текстур. Если у вас наблюдаются проблемы с производительностью, попробуйте уменьшить это значение (для лучших результатов меняйте разрешение экрана, глубину цвета и качество текстур пропорционально)."}
 			{"detail#"
-				{"detail_low" "Очень низкое"}
+				{"detail_low" "Для КК вара"}
 				{"detail_above_low" "Низкое"}
 				{"detail_medium" "Среднее"}
 				{"detail_above_medium" "Высокое"}
@@ -354,7 +354,7 @@
 				{"message_chatwheel"
 					{"care" "Горит супостат!"}
 					{"wp" "Молодец!"}
-					{"help" "Поддержи огнем!"}
+					{"help" "Макс петух помоги!"}
 					{"back" "До свидания!"}
 					{"go" "Заходим в очко сереги!"}
 					{"ok" "Я в курсе!"}
@@ -1011,7 +1011,7 @@
 		}
 	}
 	{"main_menu"
-		{"quit_confirm" "Выйти из игры?"}
+		{"quit_confirm" "Макс даун?"}
 		{"exit_confirm" "Прервать миссию?"}
 		{"restart_confirm" "Начать миссию заново?"}
 	}
@@ -1738,52 +1738,52 @@
         "<s(29)f(impact)>PG Cold War Team\n "
         "<s(18)f(impact)>www.phglobal.my1.ru"
 		"%Ведущий разработчик и геймдизайнер"
-		"|Сергей Тимош Тимошенко(Timosh)"
+		"|Бебряш(bebryash)"
 		"%Автор идеи, бывший ведущий разработчик"
-		"|Владимир Pheonix Скрыпников"
+		"|Бебряш"
 		"%Разработка"
-		"|BARMALEI(ZeeF)"
-		"|MONST3R666"
+		"|Бебряш"
+		"|Бебряш"
 		"%Программирование"
-		"|DiMkA"
-		"|Сергей Тимош Тимошенко(Timosh)"
+		"|Бебряш"
+		"|Бебряш"
 		"%Создание объектов"
-		"%Текстуры"
-		"|BACKFIRE(Metis)"
-		"|ICeFlanker(Glebka)"
-		"%3D моделирование"
-		"|Cagyar"
-		"|ld_fox98"		
-		"|Maksilin"
-		"|$an-SchezZzzz"
+		"%Максим даун"
+		"|Максим даун"
+		"|Максим даун"
+		"%3D моделирование очка сереги"
+		"|Максим даун"
+		"|Максим даун"		
+		"|Максим даун"
+		"|Максим даун"
 		"%Разработка миссий"
-		"|deadhead1(Toxa88)"
-		"|Dolphin(virpil95)"
+		"|Бебряш"
+		"|Бебряш"
 		"%Создание карт"
-		"|Andrey Filinsky(Stern)"
+		"|Бебряш"
 		"%Озвучка миссий"
-		"|Shalopay"
+		"|Бебряш"
 		"%Локализация"	
-		"|Amin(maaa)"
+		"|Колобок"
 		"%Коммьюнити"
-		"|Amin(maaa)"
-		"|ElectroStallin(Yuri)"
-		"|Haseo"
-		"|KeNNy"
+		"|Секретарь"
+		"|Сепера"
+		"|Кова"
+		"|Колобок"
 		"%Бывшие разработчики"
-		"|Anton - [Panzer]"
-		"|Flatron525"
-		"|Kemper"
-		"|Simus aka g521"
-		"|StarMeh"
+		"|Бебряш"
+		"|Бебряш"
+		"|Бебряш"
+		"|Бебряш"
+		"|Бебряш"
 		"%Особые благодарности"
 		"%Авторам некоторых моделей"
-		"|Datakill"
-		"|Ist"
-		"|Mateck"
-		"|Soul_Assassin"
-		"|Vilas"
-		"|vaskmd"
+		"|Бебряш"
+		"|Бебряш"
+		"|Бебряш"
+		"|Бебряш"
+		"|Бебряш"
+		"|Бебряш"
 		"%Автор видеороликов\n"
 		"|igorusha\n"
 		"|<s(18)f(impact)>Автор скинов солдат США, шлемов и бронежилетов"
