--- a/localization/#dlg_mp.lng
+++ b/localization/#dlg_mp.lng
@@ -233,9 +233,9 @@
 			}
 			{"neutral_zone" "Серая зона"}
 			{"frontline_2"
-				{"info" "Захватывайте и удерживайте точки, обозначенные на миникарте."}
+				{"info" "Серега пидор."}
 				{"rules" "Командная игра. Цель каждой команды  -  захватить и удерживать большее количество территориий, обозначенных точками на миникарте. Побеждает команда, сумевшая  удержать территории до тех пор, пока не кончится время или одна из команд не достигнет максимума контроля. Время игры ограничено. Захватить и удерживать территорию может только пехота.\nИзначально стороны разделены, есть время на организацию обороны. Боевые действия начнутся после истечения таймера."}
-				{"objective" "Захватывайте и удерживайте территории, обозначенные точками."}
+				{"objective" "Захватывайте и удерживайте анусы, обозначенные точками."}
 			}
 			{"role_play" "Сценарии"}
 			{"role_play"
@@ -368,8 +368,8 @@
 			{"player_limit" "Не подключиться: достигнут предел количества игроков."}
 		}
 		{"lobby"
-			{"title_quit_game" "Сдохнуть в муках?"}
-			{"title_close_game" "Сдохнуть в муках?"}
+			{"title_quit_game" "Максим педик?"}
+			{"title_close_game" "Максим педик?"}
 			{"title_close_game_xp" "Do you really want to surrender?\n\nYou will receive no XP and lose your chance for an item drop!\nStay in-game for fair-play."}
 			{"title_surrender_game" "Do you really want to surrender?\n\nYou will lose all XP collected during the match, gain a loss and weaken your ranked trust rating.\nStay in-game for fair-play."}
 			{"title_zone" "Выбор сервера"}
@@ -419,9 +419,9 @@
 			}
 			{"setup"
 				{"player.name" "Имя"}
-				{"player.team" "Команда"}
-				{"player.army" "Сторона"}
-				{"preset.gamemode" "Подкрепления"}
+				{"player.team" "Масть"}
+				{"player.army" "Масть"}
+				{"preset.gamemode" "Выберите тип проникновения"}
 				{"preset.unitmode" "Тип войск"}
 				{"preset.unitmode#hint" "Используйте стандартный набор или укажите доступные войска"}
 				{"preset.specmode" "Количество войск"}
@@ -550,7 +550,7 @@
 				{"upload" "Загрузить"}
 				{"browse" "Просмотреть"}
 				{"rules" "Камасутра"}
-				{"advanced" "Расширенные настройки"}
+				{"advanced" "Расширенние очка максима"}
 				{"results" "Показать результат предыдущей игры"}
 				{"matchmaking" "Пункт призыва"}
 				{"match_making_start" "На фронт"}
@@ -565,14 +565,14 @@
 				{"results" "Итог"}
 			}
 			{"slot"
-				{"empty_slot" "пусто"}
-				{"closed_slot" "закрыто"}
+				{"empty_slot" "макс писю нюхает"}
+				{"closed_slot" "хост педик"}
 				{"reserved_slot" "резерв"}
 				{"reserved_slot_canjoin" "В резерве"}
 				{"ai_slot" "ИИ"}
 				{"menu"
 					{"open" "Открыть ячейку"}
-					{"closed" "Закрыть ячейку"}
+					{"closed" "Закроешь=гей"}
 					{"reserved" "Зарезервировать ячейку"}
 					{"ai_easy" "<c(51 153 0)e(shadow)>ИИ: Легкий"}
 					{"ai_normal" "<c(102 102 255)e(shadow)>ИИ: Средний"}
@@ -614,7 +614,7 @@
 				{"remove_player" "Удалить игрока из команды"}
 				{"session_info" "Посмотреть подробную информацию о сессии"}
 				{"search_options" "Настройки поиска сессии"}
-				{"join_team" "Двойной щелчок для присоединения к команде."}
+				{"join_team" "Двойной щелчок для введения санкций."}
 				{"unranked" "%1% Игр сыграно"}
 				{"ranked" "%1% Игр с рангом сыграно"}
 				{"min_user_performance" "Минимальная производительность"}
@@ -624,7 +624,7 @@
 			{"color_my_name" "<c(fece99)>"}
 			{"color_my_name_dark" "<c(c4935c)>"}
 			{"color_private" "<c(9adbf5)>"}
-			{"txt_advanced_on" "Некорректная установка дополнительных параметров может негативно повлиять на играбельность. Хотите продолжить?"}
+			{"txt_advanced_on" "Некорректная установка дополнительных параметров может негативно повлиять на играбельность. Хотите умереть?"}
 			{"txt_advanced_off" "Настройки сетевой игры будут установлены в стандартные значения. Продолжить?"}
 			{"txt_test_mode_on" "Тестовый режим может быть нестабилен.\n\nПродолжить?"}
 			{"txt_advanced" "<c(a60000)><x.>Расширенные настройки"}
@@ -636,7 +636,7 @@
 				{"team_color" "<c(790505)>"}
 				{"title" "<f(impact)s(28)c(255 255 255)>%1%"}
 				{"common" "<y(+9)>Игра"}
-				{"teams" "<y(+9)>Команды"}
+				{"teams" "<y(+9)>Масти"}
 				{"mods" "<y(+9)>Моды"}
 				{"players" "Игроков:"}
 				{"game_type" "Тип игры:"}
@@ -809,11 +809,11 @@
 			{"txt_download" "%s будет загружено."}
 			{"txt_mapapply" "%s будет применено."}
 			{"txt_modapply" "МОДы %s будут применены."}
-			{"txt_missingmods" "Missing mods:"}
+			{"txt_missingmods" "Missing мама максима:"}
 			{"txt_desyncwarning" "Игра с ресурсами отличающимися от мастера может привести к рассинхронизации."}
 			{"txt_exedesync" "Обнаружено несоответствие исполняемых файлов."}
-			{"txt_resourcedesync" "Обнаружено несоответствие ресурсов."}
-			{"txt_resourcedesyncfor" "Обнаружена рассинхронизация ресурсов - %1%."}
+			{"txt_resourcedesync" "Макс насрал в КК вар."}
+			{"txt_resourcedesyncfor" "Макс насрал в КК вар - %1%."}
 			{"txt_mapnotfound" "Карта не найдена."}
 			{"txt_mapdesync" "Обнаружено несоответствие карты."}
 			{"txt_mapcompare" "Установлена карта %1%, требуется карта %2%."}
@@ -825,14 +825,14 @@
 		}
 		{"scene"
 			{"round" "Раунд %1% из %2%"}
-			{"title_transfer" "Передача юнитов"}
-			{"hint_transfer" "Передать юнитов другому игроку"}
+			{"title_transfer" "Передача сифилиса"}
+			{"hint_transfer" "Передать сифилис другому игроку"}
 			{"msg_quality_reducing" "Понижены настройки видео для повышения производительности"}
 			{"msg_reinforcement_arrived" "Прибыло подкрепление: %1%."}
 			{"msg_transfered" "Юниты (%1%) были переданы игроку %2%"}
-			{"txt_waitingfor" "<f(bookman_hq)s(13)>Падение производительности у игрока"}
+			{"txt_waitingfor" "<f(bookman_hq)s(13)>Дауны,подождите "}
 			{"txt_comingup" "<f(bookman_hq)s(13)>Синхронизация с сервером"}
-			{"txt_winner" "Победитель - %1%!"}
+			{"txt_winner" "Пососал хуй - %1%!"}
 			{"txt_draw" "Ничья"}
 			{"hint_cost"
 				{"command" "CP: %1%"}
@@ -848,8 +848,8 @@
 			{"hint_time" "Время: %1%"}
 			{"hint_score" "Очки: %1%"}
 			{"chat"
-				{"say_all" "<c(ff4500)e(shadow)>Сообщение всем</c>"}
-				{"say_team" "<c(7fffd4)e(shadow)>Сообщение команде</c>"}
+				{"say_all" "<c(ff4500)e(shadow)>Телевещание</c>"}
+				{"say_team" "<c(7fffd4)e(shadow)>Сообщение своим педикам</c>"}
 				{"prefix_all" "<c(ff4500)e(shadow)>(Все) </c>"}
 				{"prefix_team" "<c(7fffd4)e(shadow)>(Свои) </c>"}
 				{"team" "<b+c(00FF00)>%s"}
@@ -857,7 +857,7 @@
 				{"private" "<b+c(6DCFF6)>%s"}
 				{"default" "<b+c(CYAN)>%s"}
 			}
-			{"txt_waitingfor_master" "<f(bookman_hq)s(13)>Ожидаем сервер"}
+			{"txt_waitingfor_master" "<f(bookman_hq)s(13)>Ожидаем пробитие"}
 			{"txt_cp" "<f(arial_narrow)s(16)c(96bbd9)><e(shadow)>%1% / %2% КО"}
 			{"txt_mp" "<f(arial_narrow)s(16)c(ee852f)><e(shadow)>%1% / %2% ОП"}
 			{"txt_mp_rate" "<f(arial_hq)s(8)c(ee852f)p(0)e(shadow)>+ %1% ОП"}
@@ -934,8 +934,8 @@
 		{"statistics"
 			{"title" "<f(impact)s(28)c(255 255 255)>Результаты игры"}
 			{"player"
-				{"title" "<s(25)y(+9)>Статистика"}
-				{"units_header" "# #Лучшие войска#<x.>Пехоты уничтожено#<x.>Техники уничтожено#<x.>Очки#<x.>Эффективность#"}
+				{"title" "<s(25)y(+9)>Макс гей,кста"}
+				{"units_header" "# #Лучшие войска#<x.>Пехоты отбайрактарено#<x.>Техники уничтожено#<x.>Очки#<x.>Эффективность#"}
 				{"score" "Счет"}
 				{"man" "Пехота:"}
 				{"veh" "Техника:"}
@@ -948,7 +948,7 @@
 				{"btn_replay" "Сохранить запись"}
 			}
 			{"result"
-				{"title" "<s(25)y(+9)>Результат"}
+				{"title" "<s(25)y(+9)>Макс гей,кста"}
 				{"header" "# #Player#<x.>Очки победы#<x.>Пехота#<x.>Техника#<x.>Очки#<x.>Ресурсы#"}
 				{"resources" "%1% / %2%"}
 			}
@@ -957,7 +957,7 @@
 			}
 			{"detail"
 				{"title" "<s(25)y(+9)>Подробности"}
-				{"units_header" "# #Войска#<x.>Пехоты уничтожено#<x.>Техники уничтожено#<x.>Счет#<x.>Эффективность#"}
+				{"units_header" "# #Войска#<x.>Пехоты обтайрактарено#<x.>Техники уничтожено#<x.>Счет#<x.>Эффективность#"}
 			}
 			{"units"
 				{"title" "<s(25)y(+9)>Войска"}
