--- a/localization/#dlg_frontend.lng
+++ b/localization/#dlg_frontend.lng
@@ -7,12 +7,12 @@
 {tags
 	{"options"
 		{"title" "<f(impact)s(28)c(255 255 255)>Настройки"}
-		{"btn_apply" "<s(21)>Макс пидор"}
+		{"btn_apply" "<s(21)>ПРИМЕНИТЬ"}
 		{"btn_cancel" "<s(21)>Пидор"}
 		{"btn_browse_hint" "Раскрыть"}
 		{"multiplayer_warning" "\n\n<c(red)>Включена многопользовательская игра, некоторые опции отключены. Покиньте меню боя для их изменения."}
 		{"timeout"
-			{"question" "Вы хотите сохранить девственность?"}
+			{"question" "Вы хотите сохранить эти настройки?"}
 			{"text" "Предыдущие настройки будут восстановлены через %1% сек."}
 			{"texture_warning" "Настройки текстур будут применены после рестарта игры."}
 			{"mod_warning" "Настройки модов будут применены после рестарта игры."}
@@ -66,7 +66,7 @@
 			{"detail" "Качество текстур"}
 			{"detail#desc" "Качество текстур. Если у вас наблюдаются проблемы с производительностью, попробуйте уменьшить это значение (для лучших результатов меняйте разрешение экрана, глубину цвета и качество текстур пропорционально)."}
 			{"detail#"
-				{"detail_low" "Для КК вара"}
+				{"detail_low" "Очень низкое"}
 				{"detail_above_low" "Низкое"}
 				{"detail_medium" "Среднее"}
 				{"detail_above_medium" "Высокое"}
@@ -354,7 +354,7 @@
 				{"message_chatwheel"
 					{"care" "Горит супостат!"}
 					{"wp" "Молодец!"}
-					{"help" "Макс петух помоги!"}
+					{"help" "Поддержи огнем!"}
 					{"back" "До свидания!"}
 					{"go" "Заходим в очко сереги!"}
 					{"ok" "Я в курсе!"}
@@ -1011,7 +1011,7 @@
 		}
 	}
 	{"main_menu"
-		{"quit_confirm" "Макс даун?"}
+		{"quit_confirm" "Выйти из игры?"}
 		{"exit_confirm" "Прервать миссию?"}
 		{"restart_confirm" "Начать миссию заново?"}
 	}
@@ -1738,52 +1738,52 @@
         "<s(29)f(impact)>PG Cold War Team\n "
         "<s(18)f(impact)>www.phglobal.my1.ru"
 		"%Ведущий разработчик и геймдизайнер"
-		"|Бебряш(bebryash)"
+		"|Сергей Тимош Тимошенко(Timosh)"
 		"%Автор идеи, бывший ведущий разработчик"
-		"|Бебряш"
+		"|Владимир Pheonix Скрыпников"
 		"%Разработка"
-		"|Бебряш"
-		"|Бебряш"
+		"|BARMALEI(ZeeF)"
+		"|MONST3R666"
 		"%Программирование"
-		"|Бебряш"
-		"|Бебряш"
+		"|DiMkA"
+		"|Сергей Тимош Тимошенко(Timosh)"
 		"%Создание объектов"
-		"%Максим даун"
-		"|Максим даун"
-		"|Максим даун"
-		"%3D моделирование очка сереги"
-		"|Максим даун"
-		"|Максим даун"		
-		"|Максим даун"
-		"|Максим даун"
+		"%Текстуры"
+		"|BACKFIRE(Metis)"
+		"|ICeFlanker(Glebka)"
+		"%3D моделирование"
+		"|Cagyar"
+		"|ld_fox98"		
+		"|Maksilin"
+		"|$an-SchezZzzz"
 		"%Разработка миссий"
-		"|Бебряш"
-		"|Бебряш"
+		"|deadhead1(Toxa88)"
+		"|Dolphin(virpil95)"
 		"%Создание карт"
-		"|Бебряш"
+		"|Andrey Filinsky(Stern)"
 		"%Озвучка миссий"
-		"|Бебряш"
+		"|Shalopay"
 		"%Локализация"	
-		"|Колобок"
+		"|Amin(maaa)"
 		"%Коммьюнити"
-		"|Секретарь"
-		"|Сепера"
-		"|Кова"
-		"|Колобок"
+		"|Amin(maaa)"
+		"|ElectroStallin(Yuri)"
+		"|Haseo"
+		"|KeNNy"
 		"%Бывшие разработчики"
-		"|Бебряш"
-		"|Бебряш"
-		"|Бебряш"
-		"|Бебряш"
-		"|Бебряш"
+		"|Anton - [Panzer]"
+		"|Flatron525"
+		"|Kemper"
+		"|Simus aka g521"
+		"|StarMeh"
 		"%Особые благодарности"
 		"%Авторам некоторых моделей"
-		"|Бебряш"
-		"|Бебряш"
-		"|Бебряш"
-		"|Бебряш"
-		"|Бебряш"
-		"|Бебряш"
+		"|Datakill"
+		"|Ist"
+		"|Mateck"
+		"|Soul_Assassin"
+		"|Vilas"
+		"|vaskmd"
 		"%Автор видеороликов\n"
 		"|igorusha\n"
 		"|<s(18)f(impact)>Автор скинов солдат США, шлемов и бронежилетов"
